<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bakesframe"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp" />